# fake-vestalis

./: .gitignore  Cargo.toml  README.md  Rocket.toml  secrets.nix.template  shell.nix
scripts/: config.sh  generate-ca.sh  generate-ed25519.sh  generate-server-certificate.sh  localhost.ext  vestalis.ext
security/ca/: CACertificate.pem  CACertificate.srl  CAPrivate.key
security/keys/: valid_ed25519key.pem  valid_ed25519key.pub
security/server/: ServerCertificate.crt  ServerCertificateRequest.csr  ServerPrivate.key
src/: main.rs
static/: fake-vestalis.js  index.html
