[package]
name = "fake-vestalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { package = "rocket", features = ["json", "tls", "mtls"], git = "https://github.com/SergioBenitez/Rocket", rev = "055ad107df9753765c2cfe02bccb99942750d57d" }
ws = { package = "rocket_ws", git = "https://github.com/SergioBenitez/Rocket", rev = "055ad107df9753765c2cfe02bccb99942750d57d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3.28" }
spectral = "0.6.0"
proptest = "1.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.21.2"
time = "0.3.22"
urlencoding = "2.1.2"
uuid = { version = "1.3.4", features = ["v4"] }
ed25519-dalek = { version = "2.0.0-rc.3", features = ["pkcs8", "pem", "std"] }
